[package]
name = "shion"
version = "0.7.0-beta.3"
authors = ["hanaTsuk1"]
license = "GPL-3.0-only"
repository = "https://github.com/shion-app/shion"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.13", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "^0.4"
tauri = { version = "2.0.0-alpha.21", features = [ "protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-process = "2.0.0-alpha.6"
tauri-plugin-fs = "2.0.0-alpha.6"
tauri-plugin-shell = "2.0.0-alpha.6"
tauri-plugin-sql = { version = "2.0.0-alpha.6", features = ["sqlite"] }
tauri-plugin-store = "2.0.0-alpha.6"
tauri-plugin-log = "2.0.0-alpha.6"
tauri-plugin-dialog = "2.0.0-alpha"
tauri-plugin-shion-synchronizer = { git = "https://github.com/hanaTsuk1/shion-synchronizer" }
tauri-plugin-shion-watcher = { git = "https://github.com/hanaTsuk1/shion-watcher" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
window-shadows = "0.2.2"
tauri-plugin-autostart = "2.0.0-alpha.6"
tauri-plugin-single-instance = "2.0.0-alpha.6"
tauri-plugin-updater = "2.0.0-alpha.6"
open = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "shion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
