[package]
name = "shion"
version = "0.11.0"
authors = ["hanaTsuk1"]
license = "GPL-3.0-only"
repository = "https://github.com/shion-app/shion"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "^0.4"
tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-clipboard-manager = "2.1.0-beta"
tauri-plugin-shion-watcher = { git = "https://github.com/shion-app/watcher" }
tauri-plugin-shion-history = { git = "https://github.com/shion-app/history" }
sys-locale = "0.3.1"
thiserror = "1.0"
parse-changelog = { version = "0.6", default-features = false, features = ["serde"] }
planif = { git = "https://github.com/hanaTsuk1/planif" }
whoami = "1.5.1"
anyhow = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"
zip = "0.6"
zip-extensions = "0.6"

[package.metadata.bin]
# cargo-run-bin
parse-changelog = { version = "^0.6" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "shion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
