[package]
name = "shion"
version = "0.12.0"
authors = ["hanaTsuk1"]
license = "GPL-3.0-only"
repository = "https://github.com/shion-app/shion"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "^0.4"
tauri = { version = "2.0.0-rc.0", features = [ "protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.3"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-store = "2.0.0-rc.0"
tauri-plugin-log = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.5"
tauri-plugin-clipboard-manager = "2.1.0-beta"
tauri-plugin-shion-watcher = { git = "https://github.com/shion-app/watcher" }
tauri-plugin-shion-history = { git = "https://github.com/shion-app/history" }
tauri-plugin-shion-sql = { git = "https://github.com/shion-app/sql" }
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-single-instance = "2.0.0-rc.0"
tauri-plugin-updater = "2.0.0-rc.0"
tauri-plugin-window-state = "=2.0.0-rc.5"
sys-locale = "0.3.1"
thiserror = "1.0"
parse-changelog = { version = "0.6", default-features = false, features = ["serde"] }
planif = { git = "https://github.com/hanaTsuk1/planif" }
anyhow = "1"
zip = "0.6"
zip-extensions = "0.6"
runas = "1.2.0"
jsonwebtoken = "9"
actix-web = "4.9.0"
actix-cors = "0.7.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
lazy_static = "1.4"
chrono = "0.4.38"
futures-util = "0.3"
derive_more = { version = "1", features = ["full"] }
reqwest = "0.12.4"
open = "5.3.0"
sea-orm = { version = "1.1.0-rc.1", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
gray_matter = "0.2.8"
now = "0.1"
dateparser = "0.2.1"
grep = "0.3.1"
walkdir = "2"

[package.metadata.bin]
# cargo-run-bin
parse-changelog = { version = "^0.6" }
sea-orm-cli = { version = "1.1.0-rc.1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "shion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
